# scRFU

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: schema.md
docs/: api.md
examples/: README.md  synthetic_scirpy_demo.py
r/: README_R.md  RFU_call.R  run_rfu_repo.R
src/scrfu/: __init__.py  attach.py  cli.py  extract.py  io.py  pl.py  rfu.py  settings.py  summary.py  tl.py  tl_rfu_repo.py
src/scrfu/backends/: rfu_repo.py
tests/: test_attach.py  test_cli.py  test_examples.py  test_extract.py  test_integration_rfu_repo.py  test_plotting.py  test_rfu_repo_backend.py  test_summary.py  test_tl_validation.py
